--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "homepage": "https://github.com/Ovaldi/EventBus",
   "authors": [
-   {"name": "Ovaldi", "email": "232280074@qq.com"}
+   {"name": "Raoh", "email": "232280074@qq.com"}
   ],
   "description": "Event bus",
   "keywords": [
