--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "event",
     "bus"
   ],
-  "author": "ovaldi",
+  "author": "Raoh <232280074@qq.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Ovaldi/EventBus/issues"
